Closed
Bug 511487
Opened 16 years ago
Closed 16 years ago
XSLT transformation fails with "onload" in FF3.6a1
Categories
(Core :: XSLT, defect, P2)
Tracking
()
RESOLVED
FIXED
| Tracking | Status | |
|---|---|---|
| status1.9.2 | --- | beta1-fixed |
People
(Reporter: matthew, Assigned: smaug)
References
Details
(Keywords: regression, testcase)
Attachments
(2 files)
|
1.26 KB,
text/html
|
Details | |
|
3.66 KB,
patch
|
peterv
:
review+
|
Details | Diff | Splinter Review |
An XSLT transformation which has "onload" on "body" fails in Firefox 3.6a1, where it succeeded in Firefox 3.5.
Test case attached. I get NS_ERROR_UNEXPECTED from nsIXSLTProcessor.transformToDocument in 3.6a1, "transformed OK" in FF3.5.
Updated•16 years ago
|
Component: Extension Compatibility → XSLT
Product: Firefox → Core
QA Contact: extension.compatibility → xslt
Version: 3.6 Branch → 1.9.2 Branch
Updated•16 years ago
|
Flags: blocking1.9.2?
Keywords: regression,
regressionwindow-wanted
| Reporter | ||
Comment 1•16 years ago
|
||
I could try and work out the regression window if someone can point out which builds I need to be trying. I looked at http://ftp.mozilla.org/pub/mozilla.org/firefox/nightly/ but I can't work out which are the appropriate builds to try.
Hello Matthew,
Glad to hear that you are willing to try to help find the regression window. In that link you should see a "2009" folder. Inside there will be a folder for each month (08 = August, etc). Inside those folders will be even more folders of the form 2009-month-day-number-product. You're interested in the builds where the product is "mozilla-central" (trunk). Once you find the build date you're interested in it should be fairly self explanatory. The basic strategy is to pick a date and test it, if you still see the problem move back further. Once you've found a build where it doesn't occur, use a binary search to narrow it down. This link provides a good overview http://quality.mozilla.org/documents-home/bugs-docs/bug-triaging-guidelines/finding-regression-windows
| Reporter | ||
Comment 3•16 years ago
|
||
Works:
20090623 (Built from http://hg.mozilla.org/mozilla-central/rev/c575412d976a)
Fails:
20090624 (Built from http://hg.mozilla.org/mozilla-central/rev/5fe89f2c22f0)
Thanks Matthew!
Based off of that information, I was able to determine that the problem began with http://hg.mozilla.org/mozilla-central/rev/8d5c08070a23 for bug 497178.
Adjusting bug fields appropriately and CCing Olli.
Blocks: 497178
Keywords: regressionwindow-wanted → testcase
Hardware: x86 → All
Version: 1.9.2 Branch → Trunk
| Assignee | ||
Updated•16 years ago
|
Assignee: nobody → Olli.Pettay
| Assignee | ||
Updated•16 years ago
|
Status: NEW → ASSIGNED
| Assignee | ||
Comment 5•16 years ago
|
||
Elements in documents which don't have window may return null manager for
body. (onfoo attributes add listener to window)
Attachment #395799 -
Flags: review?(peterv)
Updated•16 years ago
|
Attachment #395799 -
Flags: review?(peterv) → review+
| Assignee | ||
Comment 7•16 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
| Assignee | ||
Comment 8•16 years ago
|
||
status1.9.2:
--- → beta1-fixed
You need to log in
before you can comment on or make changes to this bug.
Description
•