 Bug 511487 -  XSLT transformation fails with onload in FF3.6a1, r=peterv